<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stopwatch</string>
    <string name="action_settings">Settings</string>
    <string name="timeText">00:00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>
    <string name="timeLapButtonText">Lap</string>
    <string name="lapNOTitle">Lap N.O</string>
    <string name="lapTimeTitle">Lap Time</string>
    <string name="deltaTimeTitle">Delta Time</string>

</resources>
